--- a/static/main_style.css
+++ b/static/main_style.css
@@ -2,50 +2,53 @@
  * CSS for main page
 */
 
-body {
-    background-image: url('/static/images/athena_nike.jpg');
+body 
+{
+    background-image: url('images/bolt.jpg');
     background-repeat: no-repeat;
     background-size: 100%; 
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.mainhead {
+.mainhead 
+{
     text-align: center;
     color: wheat;
-    font-family: 'audrey';
+    font-family: Helvetica;
     font-size: 22px;
 }
 
-.maintask {
+.maintask 
+{
     display: flex;
 }
 
-.create {
+.create
+{
     width: 30%;
     padding-top: 10%;
     padding-right: 10%;
     padding-left: 10%;
     padding-bottom: 10%;
     border-right-style: solid;
-    border-right-color: wheat;
-    border-right-width: 1.5px;
+    border-right-color : transparent;
+    border-right-width: 1.5px;    
 }
 
-.startsession {
-    width: 30%;     
+
+.startsession 
+{  
     padding-top: 10%;
-    padding-left: 10%;
+    padding-left: 40%;
     padding-right: 10%;
+    color: rgb(255, 255, 255);
 }
 
-.textbox {
-    padding: 10%;
-}
 
 .signupbutton {
-    padding-top: 20%;
-    padding-bottom: 20%;
-    padding-right: 20%;
-    padding-left: 50%;
+    background-color: transparent;
+    color: black;
+    text-align: center;
 }
 
 .loginbutton {
@@ -56,10 +59,83 @@ body {
 
 .quote 
 {
-    color: purple;
+    color: rgb(255, 255, 255);
     font-family: 'Trebuchet MS';
     font-size: 14px;
-    padding-top: 5%;
-    padding-left: 5%;
+    padding-top: 7%;
+   
     text-align: center;
 }
+
+.button {
+    border-radius: 8px;
+    background-color:  #ca1212;
+    color:rgb(0, 0, 0);
+    text-align: center;
+    font-size: 18px;
+    padding: 10px;
+    width: 115px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  border: 2px solid #ca1212;
+  }
+  
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+    width: 30%;
+  }
+  
+  .button:hover span {
+    padding-right: 25px;
+    
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+  
+.container 
+{
+    padding: 16px;
+    background-color: white;
+}
+
+/* Full-width input fields */
+input[type=text], input[type=password] 
+{
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: flex;
+    border: none;
+    background: #f1f1f1;
+}
+
+
+/* hr styling */
+hr 
+{
+    border: 1px solid #f1f1f1;
+    margin-bottom: 25px;
+}
+
+/* Opacity for regbutton */
+.registerbtn:hover 
+{
+    opacity: 1;
+}
+
