Working login functionality

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -20,7 +20,7 @@
 
         <!--Details section-->
         <div class="detail">
-            <form action="http://127.0.0.1:5000/signup" method="POST">
+            <form action="https://127.0.0.1:5000/signup" method="POST">
                 <!--Name-->
                     <!--First name-->
                     <div class="first">
