--- a/static/challengelist_style.css
+++ b/static/challengelist_style.css
@@ -44,7 +44,8 @@ li a
 
 li a:hover:not(.active) 
 {
-    background-color: #111;
+    background-color: rgb(17, 17, 17);
+    
 }
 
 .active 
@@ -55,9 +56,52 @@ li a:hover:not(.active)
 .navigation
 {
     padding-top: 1%;
+    padding-bottom: 2%;
 }
 
 .contact
 {
     color: red;
+}
+
+.table1
+{
+    padding: 3%;
+}
+
+#customers 
+{
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse:collapse;
+    width: 100%;
+}
+
+#customers td, #customers th 
+{
+    border: 1px solid rgba(221, 221, 221, 0.26);
+    padding: 17px;
+}
+
+#customers tr:nth-child(even)
+{
+    background-color: #a014145e;
+}
+
+#customers tr:nth-child(odd)
+{
+    background-color: #f2f2f2;
+}
+
+#customers tr:hover 
+{
+    background-color: rgb(31, 22, 22);
+}
+
+#customers th
+{
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: red;
+    color: white;
 }
