--- a/templates/friends.html
+++ b/templates/friends.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>
-            Home Page
+            Friends
         </title>
-        <link rel="stylesheet" type="text/css" href="home_style.css">
+        <link rel="stylesheet" type="text/css" href="friends_style.css">
     </head>
 
     <body>
@@ -22,11 +22,11 @@
                     <!--this is the navigation bar-->
                     <div class = "navigation">
                             <ul>
-                                    <li><a class="active" href="home.html">Home</a></li>
+                                    <li><a href="home.html">Home</a></li>
                                     <li><a href="addrun.html">Add Run</a></li>
                                     <li><a href="cchallenge.html">Create Challenge</a></li>
                                     <li><a href="challlengelist.html">Challenge List</a></li>
-                                    <li><a href="#contact">Add Friend</a></li>
+                                    <li><a class="active" href="friends.html">Friends</a></li>
                                     <li><a href="#contact">History</a></li>
                                     <li style="float:right"><h3 class="contact">Contact: satisfy@gmail.com</h3></li>
                             </ul>
