--- a/static/main_style.css
+++ b/static/main_style.css
@@ -45,13 +45,15 @@ body
 }
 
 
-.signupbutton {
+.signupbutton 
+{
     background-color: transparent;
     color: black;
     text-align: center;
 }
 
-.loginbutton {
+.loginbutton 
+{
     padding-top: 5%;
     padding-bottom: 5%;
     padding-left: 30%;
@@ -61,52 +63,58 @@ body
 {
     color: rgb(255, 255, 255);
     font-family: 'Trebuchet MS';
-    font-size: 14px;
+    font-size: 16px;
     padding-top: 7%;
-   
+    padding-left: 10%;
+    padding-right: 10%;
     text-align: center;
 }
 
-.button {
-    border-radius: 8px;
-    background-color:  #ca1212;
-    color:rgb(0, 0, 0);
-    text-align: center;
-    font-size: 18px;
-    padding: 10px;
-    width: 115px;
-    transition: all 0.5s;
-    cursor: pointer;
-    margin: 5px;
-  border: 2px solid #ca1212;
-  }
+.button 
+{
+border-radius: 8px;
+background-color:  #ca1212;
+color:rgb(0, 0, 0);
+text-align: center;
+font-size: 18px;
+padding: 10px;
+width: 115px;
+transition: all 0.5s;
+cursor: pointer;
+margin: 5px;
+border: 2px solid #ca1212;
+}
   
-  .button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-  }
-  
-  .button span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-    width: 30%;
-  }
-  
-  .button:hover span {
-    padding-right: 25px;
-    
-  }
-  
-  .button:hover span:after {
-    opacity: 1;
-    right: 0;
-  }
+.button span 
+{
+cursor: pointer;
+display: inline-block;
+position: relative;
+transition: 0.5s;
+}
+
+.button span:after 
+{
+content: '\00bb';
+position: absolute;
+opacity: 0;
+top: 0;
+right: -20px;
+transition: 0.5s;
+width: 30%;
+}
+
+.button:hover span 
+{
+padding-right: 25px;
+
+}
+
+.button:hover span:after 
+{
+opacity: 1;
+right: 0;
+}
   
 .container 
 {
