linking signup html-css

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,7 +6,7 @@
             Sign Up
         </title>
 
-        <link rel="stylesheet" type="text/css" href="signup_style.css">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'signup_style.css') }}">
     </head>
 
     <body>
